--- a/demoapp/templates/demoapp/index.html
+++ b/demoapp/templates/demoapp/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Demo App</title>
+    <title>Azure Demo App</title>
 </head>
 <body>
-<h1>Helo world</h1>
+<h1>Hello Azure world! </h1>
 </body>
 </html>
